# unicard

./: Cargo.toml  LICENCE  LICENCE-APACHE  LICENCE-MIT  README.md
unicard_core/: Cargo.toml
unicard_core/src/: instance.rs  lib.rs  module.rs
unicard_types/: Cargo.toml
unicard_types/src/: lib.rs
unicard_types_macro/: Cargo.toml
unicard_types_macro/src/: enum_derive.rs  lib.rs  shared.rs  struct_derive.rs
unicard_types_macro/tests/: macro_expansions.rs  trybuild.rs
unicard_types_macro/tests/ui/: enum_generic_test.rs  enum_generic_test.stderr  enum_test.rs  enum_test.stderr  struct_generic_test.rs  struct_generic_test.stderr  struct_normal_test.rs  struct_normal_test.stderr  struct_tuple_test.rs  struct_tuple_test.stderr  union_test.rs  union_test.stderr
