[package]
name = "unicard_core"
version = "0.1.0"
authors = ["Zachary Whiteley <z.n.whiteley@gmail.com>"]
description = "The core crate of unicard which handles data structures and the plugin system"
repository = "https://github.com/zwhiteley/unicard"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "13.0.0"
zip = "0.6.6"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"

[dev-dependencies]
serde_test = "1.0.176"